// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routeTask — Regression Snapshots > produces a stable decision for cost-first task 1`] = `
{
  "candidates": [
    {
      "costPerOutputMToken": 15,
      "dimensionScores": {
        "codegen": 92,
        "instructionFollowing": 90,
      },
      "endpointId": "ep-quality",
      "endpointName": "Quality King",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 54.64,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
    {
      "costPerOutputMToken": 0.8,
      "dimensionScores": {
        "codegen": 65,
        "instructionFollowing": 70,
      },
      "endpointId": "ep-cost",
      "endpointName": "Cost Saver",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 78.27,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
    {
      "costPerOutputMToken": 3,
      "dimensionScores": {
        "codegen": 80,
        "instructionFollowing": 82,
      },
      "endpointId": "ep-balanced",
      "endpointName": "Balanced Choice",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 80.56,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
    {
      "costPerOutputMToken": 15,
      "dimensionScores": {
        "codegen": 92,
        "instructionFollowing": 90,
      },
      "endpointId": "ep-degraded",
      "endpointName": "Degraded King",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 38.25,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
    {
      "costPerOutputMToken": 3,
      "dimensionScores": {
        "codegen": 80,
        "instructionFollowing": 82,
      },
      "endpointId": "ep-tiebreak",
      "endpointName": "Tie Breaker",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 80.56,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
  ],
  "excludedCount": 0,
  "excludedReasons": {},
  "fallbackChain": [
    "ep-balanced",
    "ep-cost",
    "ep-quality",
  ],
  "policyRulesApplied": [],
  "reason": "Selected Tie Breaker (mock-provider/mock-model) for 'code-gen': fitness 80.6. Code quality is critical — frontier only.",
  "selectedEndpointId": "ep-tiebreak",
  "selectedModelId": "mock-model",
  "selectedProviderId": "mock-provider",
  "sensitivity": "internal",
  "taskType": "code-gen",
  "timestamp": "mock-timestamp",
}
`;

exports[`routeTask — Regression Snapshots > produces a stable decision for quality-first task 1`] = `
{
  "candidates": [
    {
      "costPerOutputMToken": 15,
      "dimensionScores": {
        "codegen": 92,
        "instructionFollowing": 90,
      },
      "endpointId": "ep-quality",
      "endpointName": "Quality King",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 91.07,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
    {
      "costPerOutputMToken": 0.8,
      "dimensionScores": {
        "codegen": 65,
        "instructionFollowing": 70,
      },
      "endpointId": "ep-cost",
      "endpointName": "Cost Saver",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 67.33,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
    {
      "costPerOutputMToken": 3,
      "dimensionScores": {
        "codegen": 80,
        "instructionFollowing": 82,
      },
      "endpointId": "ep-balanced",
      "endpointName": "Balanced Choice",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 80.93,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
    {
      "costPerOutputMToken": 15,
      "dimensionScores": {
        "codegen": 92,
        "instructionFollowing": 90,
      },
      "endpointId": "ep-degraded",
      "endpointName": "Degraded King",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 63.75,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
    {
      "costPerOutputMToken": 3,
      "dimensionScores": {
        "codegen": 80,
        "instructionFollowing": 82,
      },
      "endpointId": "ep-tiebreak",
      "endpointName": "Tie Breaker",
      "excluded": false,
      "excludedReason": undefined,
      "fitnessScore": 80.93,
      "modelId": "mock-model",
      "providerId": "mock-provider",
    },
  ],
  "excludedCount": 0,
  "excludedReasons": {},
  "fallbackChain": [
    "ep-tiebreak",
    "ep-balanced",
    "ep-cost",
  ],
  "policyRulesApplied": [],
  "reason": "Selected Quality King (mock-provider/mock-model) for 'code-gen': fitness 91.1. Code quality is critical — frontier only.",
  "selectedEndpointId": "ep-quality",
  "selectedModelId": "mock-model",
  "selectedProviderId": "mock-provider",
  "sensitivity": "internal",
  "taskType": "code-gen",
  "timestamp": "mock-timestamp",
}
`;
